--- a/tsunagaru-kun/UI/Login/Login.storyboard
+++ b/tsunagaru-kun/UI/Login/Login.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="つながるくん" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xUR-4l-OAZ">
-                                <rect key="frame" x="69.5" y="80" width="236" height="48"/>
+                                <rect key="frame" x="69" y="80" width="236" height="48"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="39"/>
                                 <color key="textColor" red="0.0" green="0.89719054674237508" blue="0.51818472255598247" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <color key="highlightedColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -37,11 +37,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iab-uc-CBk">
-                                <rect key="frame" x="77" y="363" width="221" height="27"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <state key="normal" title="アカウントをお持ちでない場合はこちら"/>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XIZ-Zg-tuw">
                                 <rect key="frame" x="58" y="313" width="260" height="40"/>
                                 <color key="backgroundColor" red="0.41568627450980394" green="0.89411764705882357" blue="0.52156862745098043" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -53,6 +48,14 @@
                                 <state key="normal" title="　つながるくんにログイン　">
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iab-uc-CBk">
+                                <rect key="frame" x="77" y="363" width="221" height="27"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="アカウントをお持ちでない場合はこちら"/>
+                                <connections>
+                                    <segue destination="2os-8k-3xm" kind="show" id="osK-KN-j0B"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -78,6 +81,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="30c-X9-o4D" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="84" y="-102.09895052473765"/>
+        </scene>
+        <!--Signup-->
+        <scene sceneID="vG2-w0-2wD">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Signup" id="2os-8k-3xm" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Mt-IL-AdZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="778" y="-109"/>
         </scene>
     </scenes>
 </document>
