--- a/tsunagaru-kun/UI/Signup/Signup.storyboard
+++ b/tsunagaru-kun/UI/Signup/Signup.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Signup View Controller-->
         <scene sceneID="Qqv-yM-Iem">
             <objects>
-                <viewController id="jcq-aN-uIx" sceneMemberID="viewController">
+                <viewController id="jcq-aN-uIx" customClass="SignupViewController" customModule="tsunagaru_kun" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dMB-RO-piu">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
