--- a/tsunagaru-kun/UI/Adddevice/Adddevice.storyboard
+++ b/tsunagaru-kun/UI/Adddevice/Adddevice.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mF8-bq-mSm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mF8-bq-mSm">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,13 +17,39 @@
                     <view key="view" contentMode="scaleToFill" id="n6K-1m-Zt2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="家電を追加する" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wRX-cv-g02">
+                                <rect key="frame" x="35" y="70" width="119" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="9Wz-re-pGC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AzZ-WW-54p">
+                                <rect key="frame" x="42" y="141" width="291" height="30"/>
+                                <color key="backgroundColor" red="0.43921568630000002" green="0.94117647059999998" blue="0.53725490200000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="291" id="GPd-U1-XGt"/>
+                                </constraints>
+                                <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="ペアリング開始"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="wRX-cv-g02" firstAttribute="leading" secondItem="W9P-Nn-8AQ" secondAttribute="leading" constant="35" id="0Nq-gK-PN5"/>
+                            <constraint firstItem="AzZ-WW-54p" firstAttribute="top" secondItem="wRX-cv-g02" secondAttribute="bottom" constant="43" id="6cM-yi-Ecx"/>
+                            <constraint firstItem="AzZ-WW-54p" firstAttribute="centerX" secondItem="n6K-1m-Zt2" secondAttribute="centerX" id="e8j-RE-brc"/>
+                            <constraint firstItem="W9P-Nn-8AQ" firstAttribute="bottom" secondItem="AzZ-WW-54p" secondAttribute="bottom" constant="496" id="rOT-Fn-pyk"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="W9P-Nn-8AQ"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mI8-7C-TTS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="146" y="131"/>
+            <point key="canvasLocation" x="144.80000000000001" y="130.88455772113943"/>
         </scene>
     </scenes>
 </document>
