--- a/tsunagaru-kun/UI/Signup/Signup.storyboard
+++ b/tsunagaru-kun/UI/Signup/Signup.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jcq-aN-uIx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jcq-aN-uIx">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -50,6 +50,7 @@
                                 </state>
                                 <connections>
                                     <action selector="tapSignupButton:" destination="jcq-aN-uIx" eventType="touchUpInside" id="h0h-kO-Fxi"/>
+                                    <segue destination="FKR-lq-SXu" kind="show" id="NvW-Xp-50N"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LvD-UE-fdT">
@@ -88,6 +89,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mi3-W5-lAr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="58" y="171"/>
+        </scene>
+        <!--Devicelist-->
+        <scene sceneID="IX2-SY-qre">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Devicelist" id="FKR-lq-SXu" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ass-QN-QLx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="628" y="85"/>
         </scene>
         <!--Login-->
         <scene sceneID="kMe-oR-pQ8">
